Finish Drone Plan & Max Distance
