# api.yml
@@ -77,6 +77,31 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /estate/{id}/drone-plan:
+    get:
+      summary: Retrieve the sum distance of drone monitoring travel in a given estate.
+      parameters:
+        - $ref: "#/components/parameters/EstateIDPathParam"
+        - name: max_distance
+          in: query
+          description: Maximum distance for drone monitoring travel.
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 10000 # Adjust the maximum value as needed
+      responses:
+        "200":
+          description: Sum distance of drone monitoring travel in the estate.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DronePlanResponse"
+        "404":
+          description: Estate not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 components:
   parameters:
     EstateIDPathParam:
@@ -86,7 +111,7 @@ components:
       schema:
         type: string
         format: uuid
-      description: ID of the estate where the tree will be stored
+      description: ID of the estate where the resource will be stored
 
   schemas:
     ErrorResponse:
@@ -159,3 +184,20 @@ components:
           type: integer
         median:
           type: integer
+    DronePlanResponse:
+      type: object
+      required:
+        - distance
+      properties:
+        distance:
+          type: integer
+        rest: 
+         $ref: "#/components/schemas/DroneRestResponse"
+    DroneRestResponse:
+      type: object
+      properties:
+        x: 
+          type: integer
+        y: 
+          type: integer
+
